--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: nirvana;
-  src: url(../src/assets/fonts/NIRVANA.TTF);
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -11,7 +6,7 @@
 }
 
 body {
-  background-image: url(/guitar-ear-tester/src/assets/images/background.jpg);
+  background-image: url(../src/assets/images/background.jpg);
   background-size: cover;
   background-attachment: fixed;
   color: white;
@@ -97,6 +92,15 @@ button:hover {
   flex-basis: 60%;
 }
 
+.flex-top input {
+  width: 50%;
+  height: 100%;
+  font-size: 20px;
+  padding: 20px;
+  border-radius: 20px;
+  outline: none;
+}
+
 .flex-top button {
   display: flex;
   justify-content: center;
@@ -106,6 +110,7 @@ button:hover {
   font-size: 75px;
   border-radius: 20px;
 }
+
 .flex-bottom {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
