--- a/src/styles.css
+++ b/src/styles.css
@@ -1,181 +1,196 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
 }
 
 body {
-    background-image: url(../src/assets/images/background.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    color: black;
+  background-image: url(../src/assets/images/background.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  color: black;
 }
 
 .container {
-    height: 100vh;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 5fr;
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 5fr;
 }
 
 #content {
-    grid-row: 2/-1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.5);
+  grid-row: 2/-1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .header {
-    background-color: rgba(0, 0, 0, 0.6);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 4em;
-    padding: 10px 20px;
-    grid-column: 1/-1;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 64px;
+  padding: 10px 20px;
+  grid-column: 1/-1;
 }
 
 .header .title {
-    color: yellow;
-    word-spacing: -7.5px;
+  color: white;
+  word-spacing: -7.5px;
 }
 
 .header button {
-    background-color: inherit;
-    border: none;
-    cursor: pointer;
-    font-size: 0.4em;
-    color: white;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+  font-size: 0.4em;
+  color: white;
 }
 
 button:hover {
-    background-color: darkgray;
+  background-color: darkgray;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%;
-    height: auto;
-    margin: 3em;
-    gap: 50px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 100%;
+  height: auto;
+  margin: 3em;
+  gap: 50px;
 }
 
 .grid-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    font-size: 25px;
-    text-align: center;
-    border-radius: 20px;
-    height: 75px;
-    font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 20px;
+  height: 75px;
+  font-weight: bold;
 }
 
 .flex-container {
-    display: flex;
-    flex-direction: column;
-    font-size: 100px;
-    width: 100%;
-    height: auto;
-    margin: 3em;
-    gap: 50px;
+  display: flex;
+  flex-direction: column;
+  font-size: 100px;
+  width: 50%;
+  height: auto;
+  gap: 50px;
 }
 
+.start-practice-btn {
+  height: 100px;
+  font-size: 75px;
+  border-radius: 20px;
+  cursor: pointer;
+}
 .flex-top {
-    flex-basis: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  flex-basis: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .flex-top button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    width: 100%;
-    font-size: 75px;
-    border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+  font-size: 75px;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 .flex-bottom {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    height: 100px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  height: 100px;
 }
 
 .flex-bottom button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  font-size: 50px;
+  cursor: pointer;
 }
 
 .flex-bottom .results {
-    grid-column: 1/-1;
+  grid-column: 1/-1;
 }
 
+.wrong {
+  color: red;
+}
+.correct {
+  color: green;
+}
 .search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    margin: 50px auto;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 50px auto;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 #search-input {
-    width: 50%;
-    padding: 10px;
-    font-size: 16px;
-    border: 0;
-    border-bottom: 1px solid gray;
-    outline: 0;
+  width: 50%;
+  height: 50px;
+  padding: 10px;
+  font-size: 16px;
+  border: 0;
+  border-bottom: 1px solid gray;
+  outline: 0;
 }
 
 .autocomplete-results {
-    width: 50%;
-    border: 1px solid #ccc;
-    border-top: none;
-    list-style-type: none;
-    padding: 0;
-    background-color: #fff;
-    overflow-y: auto;
-    max-height: 420px;
+  width: 50%;
+  border: 1px solid #ccc;
+  border-top: none;
+  list-style-type: none;
+  padding: 0;
+  background-color: #fff;
+  overflow-y: auto;
+  max-height: 420px;
 }
 
 .autocomplete-results li {
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    text-align: left;
-    display: flex;
-    gap: 10px;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: left;
+  display: flex;
+  gap: 10px;
 }
 
 .autocomplete-results li img {
-    height: 64px;
+  height: 64px;
 }
 
 .autocomplete-results li:hover {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
 
 .metronome-flex-container {
-    display: flex;
-    font-size: 100px;
-    width: 100%;
-    height: auto;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  font-size: 100px;
+  width: 100%;
+  height: auto;
+  align-items: center;
+  justify-content: space-around;
 }
