--- a/src/styles.css
+++ b/src/styles.css
@@ -154,13 +154,11 @@ button:hover {
   padding: 10px;
   font-size: 16px;
   border: 0;
-  border-bottom: 1px solid gray;
   outline: 0;
 }
 
 .autocomplete-results {
   width: 50%;
-  border: 1px solid #ccc;
   border-top: none;
   list-style-type: none;
   padding: 0;
@@ -196,7 +194,7 @@ button:hover {
 }
 
 .metronome-container {
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
   display: flex;
   justify-content: center;
   align-items: center;
