--- a/src/styles.css
+++ b/src/styles.css
@@ -56,91 +56,124 @@ button:hover {
     background-color: darkgray;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+.practice-container
+{
     width: 100%;
-    height: auto;
-    margin: 3em;
-    gap: 50px;
-}
-
-.grid-item {
+    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     padding: 20px;
-    font-size: 25px;
-    text-align: center;
-    border-radius: 20px;
-    height: 75px;
-    font-weight: bold;
 }
-
-.flex-container {
-    display: flex;
-    flex-direction: column;
-    font-size: 100px;
-    width: 50%;
-    height: auto;
-    gap: 50px;
-}
-
-.start-practice-btn {
-    height: 100px;
-    font-size: 75px;
-    border-radius: 20px;
-    cursor: pointer;
-}
-
-.flex-top {
-    flex-basis: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.flex-top button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
+.practice-title {
     width: 100%;
-    font-size: 75px;
-    border-radius: 20px;
+    height: auto;
+    font-size: 40px;
+    padding-bottom: 20px;
+    color: white;
+}
+.category-div {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    font-size: 30px;
+    gap: 50px;
+    padding: 20px;
+}
+
+.category-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    border-radius: 25px;
+}
+
+.category-btn:hover {
+    filter: brightness(80%);
     cursor: pointer;
 }
 
-.flex-bottom {
+.game-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.game-top {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.game-top div {
+    background-color: white;
+    font-size: 40px;
+    border-radius: 25px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.game-top div:hover {
+    filter: brightness(80%);
+    cursor: pointer;
+}
+
+.game-bottom {
+    height:100%;
+    width: 100%;
+}
+
+.selection-choice-grid {
+    width: 100%;
+    height: 60%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    height: 100px;
-}
-
-.flex-bottom button {
+    gap: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
-    font-size: 50px;
+}
+
+.choice-btn {
+    background-color: white;
+    width: 100%;
+    height: 150px;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+}
+
+.choice-btn:hover {
+    filter: brightness(80%);
     cursor: pointer;
 }
-
-.flex-bottom .results {
-    grid-column: 1/-1;
+.results-div {
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     font-size: 40px;
-}
-
-.wrong {
-    color: red;
 }
 
 .correct {
     color: green;
 }
 
+.wrong {
+    color: red;
+}
 .search-container {
     display: flex;
     justify-content: center;
