--- a/src/styles.css
+++ b/src/styles.css
@@ -12,13 +12,14 @@ body {
     color: black;
 }
 
-.button-container{
+.button-container {
     display: flex;
     justify-self: center;
     align-items: center;
     white-space: nowrap;
     gap: 10px;
 }
+
 .container {
     height: 100vh;
     width: 100%;
@@ -63,14 +64,14 @@ button:hover {
     background-color: darkgray;
 }
 
-.practice-container
-{
+.practice-container {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     padding: 20px;
 }
+
 .practice-title {
     width: 100%;
     height: auto;
@@ -78,6 +79,7 @@ button:hover {
     padding-bottom: 20px;
     color: white;
 }
+
 .category-div {
     width: 100%;
     height: 100%;
@@ -130,13 +132,14 @@ button:hover {
     justify-content: center;
     align-items: center;
 }
+
 .game-top div:hover {
     filter: brightness(80%);
     cursor: pointer;
 }
 
 .game-bottom {
-    height:100%;
+    height: 100%;
     width: 100%;
 }
 
@@ -166,6 +169,7 @@ button:hover {
     filter: brightness(80%);
     cursor: pointer;
 }
+
 .results-div {
     height: 40%;
     display: flex;
@@ -181,6 +185,7 @@ button:hover {
 .wrong {
     color: red;
 }
+
 .search-container {
     display: flex;
     justify-content: center;
@@ -568,8 +573,7 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.youtube-container
-{
+.youtube-container {
     width: 50%;
     display: flex;
     justify-content: center;
@@ -582,7 +586,7 @@ button:hover {
     width: 100%;
 }
 
-.yt-top{
+.yt-top {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -595,53 +599,74 @@ button:hover {
 }
 
 .strum-container {
-    color: white;
     font-size: 40px;
-    width: 50%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 80%;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+}
+
+.strum-top {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 20px;
+}
+
+.strum-left {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-
-.strum-top {
     width: 100%;
+    height: 100%;
 }
 
-.strum-title {
-    font-size: 60px;
+.strum-left input {
+    width: 75%;
+}
+.strum-left label {
+    padding: 10px
 }
 
-.strum-form {
+.strum-right {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    padding: 20px;
+    width: 100%;
+    height:100%
+
 }
 
 .strum-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
     width: 100%;
 }
 
-.strum-grid{
+.strum-bottom div{
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 25px;
+}
+
+.strum-bottom div:hover {
+    background-color: #0056b3;
+}
+
+.pattern-output {
+    padding: 20px;
     display: grid;
     grid-template-columns: repeat(8,2fr);
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.strum-direction:hover {
-    background-color: rgba(0, 0, 0, 0.4);
-}
-.strum-btn {
-    width: 100%;
-}
-
-.strum-btn:hover {
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.strum-beats {
 }
